Fixed overflow-y to make page scrollable again

--- a/frontend/src/routes/privateSection.css
+++ b/frontend/src/routes/privateSection.css
@@ -6,6 +6,6 @@
 /* Resizes the content to match the sidebar */
 .resizingContent {
     width: calc(100% - 200px);
-    overflow-y: visible;
+    overflow-y: auto;
     height: 100vh;
 }
